--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>BE MORE RESPECTFUL!!!!</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
